--- a/app/src/main/res/layout/content_album.xml
+++ b/app/src/main/res/layout/content_album.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorMainBackground"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".album.AlbumActivity"
     tools:showIn="@layout/activity_album">
@@ -21,23 +22,13 @@
             <ListView
                 android:id="@+id/songList"
                 android:layout_width="wrap_content"
-                android:layout_height="680dp"
+                android:layout_height="727dp"
                 android:scrollbars="vertical"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <Button
-                android:id="@+id/button"
-                android:layout_width="match_parent"
-                android:layout_height="68dp"
-                android:onClick="goAddSong"
-                android:text="@string/song_add_button"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/songList" />
         </android.support.constraint.ConstraintLayout>
 
     </LinearLayout>
