--- a/app/src/main/res/layout/content_album_add.xml
+++ b/app/src/main/res/layout/content_album_add.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorMainBackground"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".album.AlbumAddActivity"
     tools:showIn="@layout/activity_album_add">
