--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,9 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textColor">@color/colorText</item>
+        <item name="android:textColorHint">@color/colorTextHighlight</item>
+        <item name="backgroundTint">@color/colorTextHighlight</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -16,5 +19,8 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
-
+    <style name="CheckboxTheme" parent="Theme.AppCompat.Light">
+        <item name="colorControlNormal">@color/colorNotExplicitCheckbox</item>
+        <item name="colorControlActivated">@color/colorExplicitCheckbox</item>
+    </style>
 </resources>
