added parent activity album id and/or song id

--- a/app/src/main/res/layout/content_song_add.xml
+++ b/app/src/main/res/layout/content_song_add.xml
@@ -71,6 +71,7 @@
             android:id="@+id/button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="addSong"
             android:text="@string/song_add_button" />
 
     </LinearLayout>
