--- a/app/src/main/res/layout/activity_album.xml
+++ b/app/src/main/res/layout/activity_album.xml
@@ -48,6 +48,6 @@
         app:backgroundTint="@color/colorPrimary"
         app:layout_anchor="@+id/include2"
         app:layout_anchorGravity="bottom|right"
-        app:srcCompat="@android:drawable/ic_input_add" />
+        app:srcCompat="@drawable/ic_baseline_add_white" />
 
 </android.support.design.widget.CoordinatorLayout>
