--- a/app/src/main/res/layout/activity_song.xml
+++ b/app/src/main/res/layout/activity_song.xml
@@ -33,6 +33,21 @@
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_song" />
+    <include
+        android:id="@+id/include3"
+        layout="@layout/content_song" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/editSongFab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="50px"
+        android:layout_marginBottom="50px"
+        android:clickable="true"
+        android:onClick="goEditSong"
+        app:backgroundTint="@color/colorPrimary"
+        app:layout_anchor="@+id/include3"
+        app:layout_anchorGravity="bottom|right"
+        app:srcCompat="@android:drawable/ic_menu_edit" />
 
 </android.support.design.widget.CoordinatorLayout>
