--- a/app/src/main/res/layout/content_song_edit.xml
+++ b/app/src/main/res/layout/content_song_edit.xml
@@ -1,7 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorMainBackground">
+    android:background="@color/colorMainBackground"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context=".song.SongEditActivity"
+    tools:showIn="@layout/activity_song_edit">
 
-</android.support.constraint.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <EditText
+            android:id="@+id/songName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="@string/song_name_placeholder"
+            android:inputType="textPersonName"
+            android:textColor="@color/colorText" />
+
+        <EditText
+            android:id="@+id/songGenres"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="@string/song_genre_placeholder"
+            android:inputType="textPersonName"
+            android:textColor="@color/colorText" />
+
+        <EditText
+            android:id="@+id/songArtist"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="@string/song_artist_placeholder"
+            android:inputType="textPersonName"
+            android:textColor="@color/colorText" />
+
+        <EditText
+            android:id="@+id/songReleaseDate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="@string/song_release_placeholder"
+            android:inputType="textPersonName"
+            android:textColor="@color/colorText" />
+
+        <EditText
+            android:id="@+id/songLength"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="@string/song_length_placeholder"
+            android:inputType="textPersonName"
+            android:textColor="@color/colorText" />
+
+        <CheckBox
+            android:id="@+id/checkBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/song_explicit_placeholder"
+            android:textColor="@color/colorTextHighlight"
+            android:textSize="18sp"
+            android:theme="@style/CheckboxTheme"/>
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/song_edit_button" />
+
+    </LinearLayout>
+</android.support.v4.widget.NestedScrollView>
