--- a/app/src/main/res/layout/content_song_edit.xml
+++ b/app/src/main/res/layout/content_song_edit.xml
@@ -60,18 +60,19 @@
             android:textColor="@color/colorText" />
 
         <CheckBox
-            android:id="@+id/checkBox"
+            android:id="@+id/songExplicit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/song_explicit_placeholder"
             android:textColor="@color/colorTextHighlight"
             android:textSize="18sp"
-            android:theme="@style/CheckboxTheme"/>
+            android:theme="@style/CheckboxTheme" />
 
         <Button
             android:id="@+id/button2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="saveSongChanges"
             android:text="@string/song_edit_button" />
 
     </LinearLayout>
