--- a/app/src/main/res/layout/activity_song.xml
+++ b/app/src/main/res/layout/activity_song.xml
@@ -33,6 +33,19 @@
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/deleteSongFab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25px"
+        android:layout_marginRight="50px"
+        android:clickable="true"
+        android:onClick="deleteSong"
+        app:backgroundTint="#fff"
+        app:layout_anchor="@+id/app_bar"
+        app:layout_anchorGravity="right|bottom"
+        app:srcCompat="@android:drawable/ic_delete" />
+
     <include
         android:id="@+id/include3"
         layout="@layout/content_song" />
