--- a/app/src/main/res/layout/compound_song_view.xml
+++ b/app/src/main/res/layout/compound_song_view.xml
@@ -8,32 +8,34 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/testText"
+            android:id="@+id/songName"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="kech"
-            android:textSize="24sp"
-            app:layout_constraintTop_toBottomOf="@+id/testText3"
-            tools:layout_editor_absoluteX="0dp" />
+            android:layout_height="wrap_content" />
 
         <TextView
-            android:id="@+id/testText3"
+            android:id="@+id/songGenres"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="kechies"
-            android:textSize="24sp"
-            app:layout_constraintTop_toBottomOf="@+id/testText2"
-            tools:layout_editor_absoluteX="0dp" />
+            android:layout_height="wrap_content" />
 
         <TextView
-            android:id="@+id/testText2"
+            android:id="@+id/songArtist"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="kechen"
-            android:textSize="24sp"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/songReleaseDate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/songLength"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/songExplicit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
     </LinearLayout>
 </merge>
