--- a/app/src/main/res/layout/content_song_edit.xml
+++ b/app/src/main/res/layout/content_song_edit.xml
@@ -56,7 +56,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="@string/song_length_placeholder"
-            android:inputType="textPersonName"
+            android:inputType="number|textPersonName"
             android:textColor="@color/colorText" />
 
         <CheckBox
@@ -69,7 +69,7 @@
             android:theme="@style/CheckboxTheme" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/saveChanges"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="saveSongChanges"
