--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,4 +24,9 @@
         <item name="colorControlNormal">@color/colorNotExplicitCheckbox</item>
         <item name="colorControlActivated">@color/colorExplicitCheckbox</item>
     </style>
+
+    <style name="DialogTheme" parent="Theme.AppCompat.Light.Dialog">
+        <item name="colorAccent">@color/colorPrimary</item>
+        <item name="android:textColor">@color/colorTextHighlight</item>
+    </style>
 </resources>
