Added song add date picker Added song edit date picker

--- a/app/src/main/res/layout/content_song_add.xml
+++ b/app/src/main/res/layout/content_song_add.xml
@@ -49,6 +49,19 @@
             android:hint="@string/song_release_placeholder"
             android:textColor="@color/colorText" />
 
+        <TextView
+            android:id="@+id/songAddDateView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10px"
+            android:layout_marginRight="10px"
+            android:background="@color/colorTextHighlight"
+            android:ems="10"
+            android:onClick="setDate"
+            android:paddingLeft="10px"
+            android:paddingTop="25px"
+            android:paddingBottom="25px" />
+
         <EditText
             android:id="@+id/songLength"
             android:layout_width="match_parent"
