--- a/app/src/main/res/layout/generic_list_item.xml
+++ b/app/src/main/res/layout/generic_list_item.xml
@@ -1,10 +1,22 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--  Single List Item Design -->
+<?xml version="1.0" encoding="utf-8"?><!--  Single List Item Design -->
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/listLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/listItem"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:padding="10dip"
-    android:textSize="16dip"
-    android:textStyle="bold"></TextView>
+    <TextView
+        android:id="@+id/listItem"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dip"
+        android:textSize="16dip"
+        android:textStyle="bold"></TextView>
+
+    <TextView
+        android:id="@+id/albumSongCount"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dip"
+        android:textColor="@color/colorTextHighlight" />
+</LinearLayout>
