Added song counter Added album list item

--- a/app/src/main/res/layout/album_list_item.xml
+++ b/app/src/main/res/layout/album_list_item.xml
@@ -13,4 +13,10 @@
         android:textSize="16dip"
         android:textStyle="bold"></TextView>
 
+    <TextView
+        android:id="@+id/albumSongCount"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dip"
+        android:textColor="@color/colorTextHighlight" />
 </LinearLayout>
