Changed some layout decisions

--- a/app/src/main/res/layout/content_song_edit.xml
+++ b/app/src/main/res/layout/content_song_edit.xml
@@ -60,7 +60,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="@string/song_length_placeholder"
-            android:inputType="number|textPersonName"
+            android:inputType="number"
             android:textColor="@color/colorText" />
 
         <CheckBox
