--- a/app/src/main/res/layout/generic_list_item.xml
+++ b/app/src/main/res/layout/generic_list_item.xml
@@ -7,7 +7,7 @@
 
     <TextView
         android:id="@+id/listItem"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dip"
         android:textSize="16dip"
