--- a/app/src/main/res/layout/content_album_list.xml
+++ b/app/src/main/res/layout/content_album_list.xml
@@ -25,6 +25,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:scrollbars="vertical"
+                android:nestedScrollingEnabled="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
